examples/test/testpolicy15498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15498
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key49: value19
      key13: value47
      key26: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value33
      podSelector:
        matchLabels:
          key11: value37
